AWS FUNDAMENTALS COMPLETED

--- a/networking/ccna-notes/Notes.tex
+++ b/networking/ccna-notes/Notes.tex
@@ -113,7 +113,16 @@
 	\end{itemize}
 	What about the firewall on your computer?\\
 	% Types of Firewalls\\
-	\textbf{Types of switches}\\ 1. Catalyst 9200 \nt{RJ = Registered Jack}
+	\textbf{Types of switches}
+	\textbf{Layer2 Swtich}
+	A layer 2 switch operates in layer 2 of OSI Model.Layer (data link) deals with MAC address. 
+	When devices connect to layer 2 switch,it stores the MAC address in the Switch table .
+	\textbf{Layer 3 Swtich or Multilayer Switch}
+	It operates at layer 3 of the OSI model. It deals with the IP address It also operates at the layer 2 which works in MAC address
+
+	\begin{itemize}
+	Catalyst 9200 \nt{RJ = Registered Jack}
+	\end{itemize}
 	\textbf{Ethernet}\\ \textbf{Bits and bytes}\\ Bits : Series of 0's or 1's. When
 	communicating across a copper network cable,a variation of the electrical signal
 	is assumed as 0's or 1's. \\ Bytes: Series of 8 0's and 1's. \\ Speed is
